Initial project setup with environment configuration, model training scripts, and Telegram bot integration. Added .gitignore and README for project documentation. Removed unused files and implemented logging for better traceability.

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ BYBIT_API_KEY=HNDKwyN4fIIk9075Hk
 BYBIT_API_SECRET=RUvcESrDXG9BFgXrZy0YuMdv50rN9amkyIKv 
 BINANCE_API_KEY=test
 BINANCE_API_SECRET=test
+TELEGRAM_BOT_TOKEN=7884030672:AAFy_msJRlSms3Dm4fkVbJFrjjgHKMx_r5w
