--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,25 @@
-ccxt
-requests
-optuna
-pandas
-numpy==1.23.5
-pandas-ta
-ta
-xgboost
-scikit-learn
-openai
-python-telegram-bot
-mplfinance
-joblib
-pydantic
+# Core dependencies
+pandas>=1.5.0
+numpy>=1.21.0
+requests>=2.28.0
+
+# Machine Learning
+xgboost>=1.6.0
+scikit-learn>=1.1.0
+
+# Asyncio
+nest_asyncio>=1.6.0
+
+# Telegram Bot
+python-telegram-bot==20.8
+
+# Data processing
+python-dateutil>=2.8.0
+
+# Logging and utilities
+python-dotenv>=0.19.0
+
+# Optional: for advanced features
+# matplotlib>=3.5.0  # for plotting
+# seaborn>=0.11.0    # for advanced plotting
+# optuna>=3.0.0      # for hyperparameter optimization
