--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ BYBIT_API_KEY=HNDKwyN4fIIk9075Hk
 BYBIT_API_SECRET=RUvcESrDXG9BFgXrZy0YuMdv50rN9amkyIKv 
 BINANCE_API_KEY=test
 BINANCE_API_SECRET=test
-TELEGRAM_BOT_TOKEN=7884030672:AAFy_msJRlSms3Dm4fkVbJFrjjgHKMx_r5w
+TELEGRAM__API_TOKEN=7884030672:AAFy_msJRlSms3Dm4fkVbJFrjjgHKMx_r5w
+TELEGRAM__CHAT_IDS=[375655674]
